Add feature certification
