# dto/update_skill_req.go
@@ -1,0 +1,6 @@
+package dto
+
+type UpdateSkillReq struct {
+	Name  string `json:"name"`
+	Level string `json:"level"`
+}
